@@ -34,13 +34,17 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_25
+    targetCompatibility = JavaVersion.VERSION_25
 }
 
 tasks.jar {
     from(fabric.output)
     from(neoforge.output)
+}
+
+tasks.withType<JavaCompile>().forEach {
+    it.options.compilerArgs.add("--enable-preview")
 }
 
 tasks.register<Jar>("sourcesJar") {
